# physics

./: .gitignore  MANIFEST.in  README.md  main.py  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_test_deploy.yml
physics/: apps.py  error.py  logging.conf  main.py  views.py
physics/motion_3d/: motion_3d.py
physics/utils/: 3d_motion.py  __gcd.py  __logger.py  area.py  areas.py  converter.py  gcd.py  linear_motion.py  logger.py  logging.conf  motion_3d.py  net_change.py  newton.py  subscript.py  superscript.py  units.py  vector.py
physics_app/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
templates/physics/: index.html
tests/: test_3d_motion.py  test_3dmotion.py  testing3dmotion.py
