##########################################################################
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
# physics_app  Copyright (C) 2022  Dellius Alexander
# This program comes with ABSOLUTELY NO WARRANTY; for details type `show w'.
# This is free software, and you are welcome to redistribute it
# under certain conditions; type `show c' for details.
##########################################################################
# See setuptools home for more info:
# https://setuptools.pypa.io/en/latest/userguide/index.html
##########################################################################
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physics"
version = "1.1"
description = "Physics is devoted to the study and understanding of all natural phenomena."
readme = "README.md"
requires-python = ">=3.7"
license = { file="LICENSE" }
authors = [
  { name="Dellius Alexander", email="info@hyfisolutions.com", school="Clayton State University", Major="Computer Science"},
]
maintainers = [
    { name="Dellius Alexander", email="info@hyfisolutions.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dellius-alexander/physics.git"
"Bug Tracker" = "https://github.com/dellius-alexander/physics.gitt/issues"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project.scripts]
cli-name = "physics.main:main"

