;# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#declarative-config
[metadata]
name = physics
version = 1.1
;author = Dellius Alexander
;author_email = info@hyfisolutions.com'
;url = https://github.com/dellius-alexander/physics.git
;maintainer = Dellius Alexander, Clayton State University, Atlanta, GA <info@hyfisolutions.com>
;maintainer_email = info@hyfisolutions.com, dellius.alexander@gmail.com
;description = Physics is devoted to the study and understanding of all natural phenomena.
long_description =
    Physics is devoted to the understanding of all natural phenomena.
    In physics, we try to understand physical phenomena at all scales—from
    the world of subatomic particles to the entire universe. Despite the
    breadth of the subject, the various subfields of physics share a
    common core. The same basic training in physics will prepare you to
    work in any area of physics and the related areas of science and
    engineering. In this section, we investigate the scope of physics;
    the scales of length, mass, and time over which the laws of physics
    have been shown to be applicable; and the process by which science
    in general, and physics in particular, operates.
    -------------------------------------------------------------------
    References:
    -------------------------------------------------------------------
    Ling, S. J., Sanny, J., &amp; Moebs, W. (2017). University Physics:
      Volume 1 (Vol. 1). OpenStax, Rice University.
    -------------------------------------------------------------------
;keywords = one, two
;license = LICENSE
;classifiers =
;    Programming Language :: Python :: 3
;    License :: OSI Approved :: MIT License
;    Operating System :: OS Independent

;###################################################################################
; This example contains just the necessary options for a src-layout, set up
; the rest of the file as described above.
; The package_dir configuration (i.e. =src) is parsed as {"": "src"}. The ""
; key has a special meaning in this context, and indicates that all the packages
; are contained inside the given directory. Also note that the value
; for [options.packages.find] where matches the value associated with "" in the
; package_dir dictionary.
; The packages to be included manually in the following manner
;###################################################################################
; Automatic discovery will only be enabled if you don’t provide any configuration
; for packages and py_modules. If at least one of them is explicitly set, automatic
; discovery will not take place.
;###################################################################################

[options]
packages =
    physics
    physics.migrations
    physics.utils
    physics_app
;package_dir=
;    =.
zip_safe = False
include_package_data = True
install_requires =
    asgiref==3.5.2
    attrs==22.1.0
    backports.zoneinfo==0.2.1
    build==0.8.0
    cycler==0.11.0
    Django==4.1.1
    django-mathjax==0.0.8
    flake8==5.0.4
    fonttools==4.37.1
    iniconfig==1.1.1
    kiwisolver==1.4.4
    matplotlib==3.5.3
    mccabe==0.7.0
    mpmath==1.2.1
    mysqlclient==2.1.1
    numpy==1.23.2
    packaging==21.3
    pandas==1.4.4
    pep517==0.13.0
    Pillow==9.2.0
    pluggy==1.0.0
    py==1.11.0
    pycodestyle==2.9.1
    pyflakes==2.5.0
    pyparsing==3.0.9
    pytest==7.1.3
    python-dateutil==2.8.2
    python-dotenv==0.21.0
    pytz==2022.2.1
    six==1.16.0
    sqlparse==0.4.2
    sympy==1.11
    tomli==2.0.1

;[options.entry_points]
;console_scripts = executable-name = physics.main:main

;[options.extras_require]
;pdf = ReportLab>=1.2; RXP
;rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests
    .DS_Store*
where=
    physics
    physics.migrations
    physics.utils
    physics_app
    static
    templates
include =
    static
    templates
[options.package_data]
* =
    *.txt
    *.rst
    *.md
    *.conf
    *.html
    *.css
    *.js
    *.png
    *.jpg
static =
    physics/css/*.css
    physics/js/*.js
    physics/img/*.png
    physics/img/*.jpg
templates = physics/*.html